Fix card title overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,14 +119,11 @@ color: #b3b3b3	;
   font-size: 20px;
   color: white;
   font-family: 'FreeSansBold', sans-serif;
-}
-.post-title {
-  color: white;
-  font-family: 'FreeSansBold', sans-serif;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
+  word-wrap: break-word ;
+  overflow-wrap: break-word ;
   hyphens: auto;
 }
+
 
 .post-card {
   padding-right: 5%;
