--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -50,10 +50,7 @@ body {
   color: red;
 }
 
-.card-title {
-  font-size: 14px; /* adjust as needed */
-  line-height: 1.2; /* adjust as needed */
-}
+
 
 
 .post-large {
